--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
-body {
+
+  body {
   background-color: black;
 }
 .main {
@@ -9,20 +10,20 @@ body {
   height: 500px;
   position: relative;
   z-index: 1;
-}
-.ryu {
-    width: 659px;
-    height: 494px;
-}
+  }
+  
 
-.ryu-ready, .ryu-still, .ryu-throwing {
+.ryu-ready, .ryu-still, .ryu-throwing ,.ryu-cool{
   width: 659px;
   height: 494px;
 }
 
-.ryu-ready, .ryu-throwing {
+.ryu-ready, .ryu-throwing ,.ryu-cool{
   display: none;
 } 
+.ryu-cool {
+  background-image: url('../images/ryu-cool.gif');
+}
 
 .ryu-ready {
   background-image: url('../images/ryu-ready-position.gif');
@@ -35,7 +36,7 @@ body {
 .ryu-throwing {
   background-image: url('../images/ryu-throwing-hadouken.png');
 }
-.hadouken, .ryu-ready, .ryu-still, .ryu-throwing {
+.hadouken, .ryu-ready, .ryu-still, .ryu-throwing ,.ryu-cool{
   background-repeat: no-repeat;
 }
 .hadouken {
@@ -45,8 +46,32 @@ body {
   display: none;
   float: left;
   position: absolute;
-  z-index: 10;
+
+    top: 150px;
+  
+  
 }
-* {
-  outline: red 1px solid;
+
+.ryu-container, .ryu {
+	float:left;
+}
+.how-to p {
+
+	width: 50%;
+	color: black;
+	font-size: 24px;
+	line-height: 45px;
+}
+
+.how-to p + p {
+
+	margin-left: 275px;
+}
+.how-to {
+	top:100px;
+	float:left;
+	position:relative;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 50px;
+	width: 600px;
 }
